mandir = @mandir@
man8dir = $(mandir)/man8
aspisdir = $(datadir)/aspis
wwwdir = $(aspisdir)/www
cgidir = $(aspisdir)/cgi-bin

man8_MANS = aspis.8
aspis_DATA = mime.essential aspis.conf
www_DATA = index.html banner.png perl-test.pl php-test.php 404.htm
cgi_DATA = cgi-test.cgi nph-test.cgi resolver.pl